# ftp-paperless-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md  melange.yaml
.github/workflows/: build-release.yml
alpine/: ftp-paperless-bridge.confd  ftp-paperless-bridge.initd
helm/ftp-paperless-bridge/: Chart.yaml  values.yaml
helm/ftp-paperless-bridge/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: auth.rs  health.rs  main.rs  paperless.rs  spool.rs  storage.rs
