[package]
name = "ftp-paperless-bridge"
description = "Present a FTP server to your network-enabled document scanner and forward anything received to paperless-ngx"
license = "Apache-2.0"
repository = "https://github.com/svenstaro/ftp-paperless-bridge"
version = "0.2.1"
edition = "2024"

[dependencies]
async-tempfile = "0.7.0"
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["wrap_help", "derive", "cargo", "env"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
libunftp = "0.21.0"
log = "0.4.27"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
